refactor: reduce code smells